ui: refactor playground controlers
