# api/swagger.json
@@ -107,6 +107,10 @@
           "type": "string",
           "x-go-name": "Label"
         },
+        "playground_base_uuid": {
+          "type": "string",
+          "x-go-name": "PlaygroundBaseUUID"
+        },
         "started_at": {
           "x-go-name": "StartedAt"
         },
